[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["mariusz.jachymczak <mariusz.jachymczak@gazeta.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langgraph = "^0.2.60"
langchain-community = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
